# please

./: BRIDGING.md  Cargo.toml  DOCKER.md  README.md
.github/workflows/: check.yaml  release.yaml
homebrew/Formula/: please.rb
inference-engine/: Cargo.toml
inference-engine/src/: backend_metal.rs  harmony_adapter.rs  lib.rs
inference-engine/src/backend_cpu/: mod.rs
inference-engine/src/backend_metal/: generation.rs  kernels.metal  mod.rs  platform.rs  probes.rs  profile.rs  runtime.rs  weights.rs
inference-engine/src/gptoss_spec/: config.rs  mod.rs  oracle.rs  tokenizer.rs  weights.rs
inference-engine/src/harmony_adapter/: mod.rs
inference-engine/src/model_store/: gguf.rs  mod.rs
inference-engine/src/runtime_core/: kv_cache.rs  limits.rs  mod.rs  planner.rs  sampler.rs
inference-engine/tools/: compare_oracles.py  python_oracle.py
src/: cli.rs  display.rs  harmony.rs  history.rs  hub.rs  inference.rs  logging.rs  main.rs  prompting.rs  protocol.rs  tools.rs
src/cli/: connect.rs  discovery.rs  io.rs  repl.rs  run.rs  turn.rs
src/cli/specials/: load.rs  mod.rs
src/display/: mod.rs  pane.rs  plain.rs  rich.rs  spinner.rs
src/harmony/: templating.rs  tests.rs
src/inference/: intuition.rs
src/tools/: apply_patch.rs  common.rs  control_command.rs  list_files.rs  mod.rs  read_file.rs  run_command.rs
src/tools/apply_patch/: applying.rs  filesystem.rs  model.rs  parsing.rs  preview.rs  tests.rs  text.rs
