[package]
name = "inference-engine"
version = "0.1.0"
edition = "2024"

[features]
default = []
profile = [
    "objc2-metal/MTLBlitCommandEncoder",
    "objc2-metal/MTLCounters",
]

[dependencies]
eyre = "0.6"
libc = "0.2"
openai-harmony = "0.0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
objc2-metal = { version = "0.3.2", features = [
    "MTLAllocation",
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLCommandQueue",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLDevice",
    "MTLLibrary",
    "MTLResource",
    "MTLTypes",
    "objc2-core-foundation",
] }
